# vcpkg-rs-mf

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: linux.yml  macos.yml  publish.yml  rust-1.12.yml  wasm.yml  windows.yml
src/: lib.rs
tests/harfbuzz/: Cargo.toml  build.rs
vcpkg_cli/: Cargo.toml
vcpkg_cli/src/: main.rs
