[package]
name = "vcpkg_rs_mf"
version = "0.3.2"
authors = ["Jim McGrath <jimmc2@gmail.com>","Patrick Vollebregt <patrick@crosscode.nl>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/crosscode-nl/vcpkg-rs-mf"
readme = "README.md"
documentation = "https://docs.rs/vcpkg_rs_mf"
description = """
A library to find native dependencies in a vcpkg tree at build
time in order to be used in Cargo build scripts.
"""
keywords = ["build-dependencies", "windows", "macos", "linux"]
categories = ["development-tools::build-utils"]

[dependencies]
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3"
lazy_static = "1"
dunce = "1.0.5"
