[package]
name = "vcpkg_cli_mf"
version = "0.3.0"
authors = ["Jim McGrath <jimmc2@gmail.com>","Patrick Vollebregt <patrick@crosscode.nl>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/crosscode-nl/vcpkg-rs-mf"
documentation = "https://docs.rs/vcpkg_rs_mf"
description = """
A command line utility to investigate which libraries will be
found by the vcpkg Cargo build helper.
"""
keywords = ["build-dependencies"]

[dependencies]
vcpkg_rs_mf = { version = "0.3.0", path = "../" }
clap = "2.31"
